# legal-advisory-v5

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CI_CD_GUIDE.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CUSTOMER_DEMO_GUIDE.md  DEMO_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DOCS_INDEX.md  Dockerfile  Dockerfile.railway  FINAL_TEST_REPORT.md  HYBRID_ARCHITECTURE.md  HYBRID_SYSTEM_TEST_REPORT.md  KNOWN_ISSUES.md  LOCAL_TESTING.md  MCP_HIGH_LEVEL_DESIGN.md  MCP_PHASE1_README.md  NETLIFY_DEPLOYMENT.md  PERFORMANCE_REPORT.md  PRODUCTION_CHECKLIST.md  PROJECT_IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  QUICK_DEPLOY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_SETUP.md  README.md  SECURITY_REPORT.md  USER_GUIDE.md  V6_IMPLEMENTATION_PLAN.md  claude_desktop_config.json  coverage.xml  docker-compose.dev.yml  docker-compose.yml  fix_mock_validator.py  netlify.toml  (+17 more)
demo/: interactive_demo.py
docs/: 01_Requirements_Specification_v4_Conversation.md  02_High_Level_Design_v5_MODULAR.md  03_Low_Level_Design_v5_Part1.md  03_Low_Level_Design_v5_Part2.md  APPENDIX_G_COMPLETION_SUMMARY.md  APPENDIX_G_INTEGRATION_PLAN.md  ARCHITECTURE_UPDATE_v4_to_v5.md  CASE_LAW_INTEGRATION_STATUS.md  CASE_LAW_TESTING_REPORT.md  COMPREHENSIVE_LEGAL_ADVISORY_IMPLEMENTATION.md  HYBRID_SUPERIORITY_EXAMPLES.md  INTERFACE_DEFINITIONS.md  legal-logic-tree-spec__1_.md
examples/: api_client_example.py  api_examples.sh
frontend/: .env.example  README.md  index.html  netlify.toml  package.json
frontend-simple/: .deploy-trigger  index.html  netlify.toml
(+114 files in other folders)
